syntax = "proto3";

import "common_domain.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

package app.improving.eventcontext;

enum EventStatus {
    EVENT_STATUS_SCHEDULED = 0;
    EVENT_STATUS_INPROGRESS = 1;
    EVENT_STATUS_PAST = 2;
    EVENT_STATUS_CANCELLED = 3;
    EVENT_STATUS_DELAYED = 4;
    EVENT_STATUS_UNKNOWN = 5;
}

message ReservationId {
    string id = 1;
}

message EventCancelled {
    EventId event_id = 1;
    MemberId cancelling_member = 2;
}

message EventDelayed {
    EventId event_id = 1;
    string reason = 2;
    EventMetaInfo meta = 3;
    google.protobuf.Duration expected_duration = 4;
}

message EventEnded {
    EventId event_id = 1;
    EventMetaInfo meta = 2;
}

message EventInfo {
    string event_name = 1;
    string description = 2;
    string event_uRL = 3; // URL type?
    OrganizationId sponsoring_org = 4;
    GeoLocation geo_location = 5;
    ReservationId reservation = 6;
    google.protobuf.Timestamp expected_start = 7;
    google.protobuf.Timestamp expected_end = 8;
    bool is_private = 9;
    string reason = 10;
}

message EventInfoChanged {
    EventId event_id = 1;
    EventInfo info = 2;
    EventMetaInfo meta = 3;
}

message EventMetaInfo {
    MemberId scheduled_by = 1;
    google.protobuf.Timestamp scheduled_on = 2;
    MemberId last_modified_by = 3;
    google.protobuf.Timestamp last_modified_on = 4;
    google.protobuf.Timestamp actual_start = 5;
    google.protobuf.Timestamp actual_end = 6;
    EventStatus status = 7;
}

message EventRescheduled {
    EventId  event_id = 1;
    EventInfo info = 2;
    EventMetaInfo meta = 3;
}

message EventResults {
    string from = 1;
    string to = 2;
}

message EventScheduled {
    EventId  event_id = 1;
    EventInfo info = 2;
    EventMetaInfo meta = 3;
}

message EventStarted {
    EventId  event_id = 1;
    EventInfo info = 2;
    EventMetaInfo meta = 3;
}

message LiveUpdate {
    string from = 1;
    string to = 2;
}